Primer intento web

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Evelia Coss"
-image: "yo_azul.jpg"
+title: "Natalie B PinedaM"
+image: "foto1_ENES.jpg"
 links:
   - label: '`r fontawesome::fa(name = "linkedin", fill = "steelblue")` LinkedIn'
     url: "https://www.linkedin.com/in/evelia-lorena-coss-navarrete-562226229/"
@@ -9,7 +9,7 @@ links:
   - label: '`r fontawesome::fa(name = "github", fill = "steelblue")` Github'
     url: "https://github.com/EveliaCoss/"
   - label: '`r fontawesome::fa(name = "envelope", fill = "steelblue")` Mail'
-    url: "mailto:ecoss@liigh.unam.mx"
+    url: "mailto:natalie.appstor@hotmail.com"
   - label: '`r fontawesome::fa(name = "user", fill = "steelblue")` CV'
     url: "https://eveliacoss.github.io/CV/cv_ECoss.html"
 output:
@@ -22,23 +22,15 @@ library(fontawesome)
 
 #### **Bio** 
 
-I am interested in gene regulation, lncRNAs, autoimmune disease, evolution and bioinformatics.
+I’m currently undertaking a project assessing the phylogenetic ties of a previously undescribed bat specimen. Some of my research interests include population genetics, paleogenomics and its relationship to disease research.
 
-Founding member of VieRnes de Bioinformatica en el LIIGH (bioinformatics fridays at @[LIIGH-UNAM](https://twitter.com/LIIGH_UNAM)) | web page: https://viernesbioinformatica.github.io/ | Github: [ViernesBioinfo2024](https://github.com/EveliaCoss/ViernesBioinfo2024) and [ViernesBioinfo2023](https://github.com/EveliaCoss/ViernesBioinfo2023)
 
 #### **Education**
 
-**Postdoctoral Fellowship** | @[LIIGH-UNAM](https://twitter.com/LIIGH_UNAM) | Dr. @[Alejandra Medina-Rivera](https://twitter.com/AleMedinaRivera) | February 2023 - Present
-
-**PhD in Plant Biotechnology** | @[Cinvestav UGA-Langebio](https://twitter.com/uga_langebio), Mexico | Dr. @[Selene Fernandez-Valverde](https://twitter.com/SelFdz) | August 2018 - January 2023
+**Genomic Science (LCGEJ)** | @[LIIGH-UNAM](https://twitter.com/LIIGH_UNAM) | Dr. @[Federico Sanchez Q.] | February 2025 - Present
 
 #### **Experience**
 
-Member of the @[JAGUAR Project](https://twitter.com/PJaguarLATAM), @[R-ladies Morelia](https://www.facebook.com/profile.php?id=100093337606435), @[RIABIO](https://twitter.com/RiaBioNet), @[LupusRGMX](https://lupusrgmx.liigh.unam.mx/quienes-somos.html), @[CDSB Mexico](https://twitter.com/CDSBMexico) and @[ISCB RSG-Mexico](https://x.com/rsg_iscb_mexico?lang=es).
+**PopGen & EvoBio + Genomic Medicine** | @[LIIGH-UNAM](https://twitter.com/LIIGH_UNAM) | Dr. @[Federico Sanchez Q.] | February 2025 - Present
 
 Repository Contributions: 
-
-Webpage [Plants&Python](https://plantsandpython.github.io/PlantsAndPython/00_Opening_page.html) | Github [Plants&Python](https://github.com/PlantsAndPython/PlantsAndPython) | Dr. Daniel H. Chitwood, Dr. Robert VanBuren and Alejandra Rougon-Cardoso
-
-[Transcriptome-guided annotation and functional classification of long non-coding RNAs in Arabidopsis thaliana](https://pubmed.ncbi.nlm.nih.gov/35982083/) | Github [Transcriptome-guided_lncRNA_annotation](https://github.com/RegRNALab/Transcriptome-guided_lncRNA_annotation) | Dr. @[Selene Fernandez-Valverde](https://twitter.com/SelFdz)
-
