--- a/index.Rmd
+++ b/index.Rmd
@@ -25,7 +25,7 @@ I’m currently undertaking a project assessing the phylogenetic ties of a previ
 
 #### **Education**
 
-**Genomic Science (LCGEJ)** | @[LIIGH-UNAM](https://twitter.com/LIIGH_UNAM) | Dr. @[Federico Sanchez Q.] | February 2025 - Present
+**Genomic Science (LCGEJ)** | @[LIIGH-UNAM](https://twitter.com/LIIGH_UNAM) | February 2024 - Present
 
 #### **Experience**
 
